[project]
name = "kb26pkuser23"
version = "0.1.1"
description = ""
authors = [
    {name = "SUNWOO",email = "cyu1023331@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)"
]
